@@ -201,6 +201,7 @@ samples/align-string.pl Demonstrate align_string method.
 samples/anaglyph.pl
 samples/border.pl       Demonstrate adding a border
 samples/flasher.pl	Animate an source image fading to a color and back
+samples/gifscale.pl	Scale an animated GIF, preserving animation info
 samples/inline_capture2image.pl	 convert captured BGR data to an image
 samples/inline_replace_color.pl  replace colors using Inline::C
 samples/interleave.pl
